LBP initial interface & POC
Signed-off-by: Sandesh Kumar <sandeshkr419@gmail.com>